--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
@@ -42,6 +43,5 @@
       "resizeMode": "contain",
       "backgroundColor": "#25292e"
     }
-    
   }
 }
